# DesignPattern

./: .gitignore  CMakeLists.txt  build.sh  makefile  readme.md
adaptor/: adaptor.cpp
bridge/: bridge.cpp
builder/: builder.cpp
command/: composite_command.cpp  simple_command.cpp
composite/: composite_safe.cpp  composite_transparent.cpp
decorator/: decorator.cpp
facade/: facade.cpp
factory/: abstract_factory.cpp  factory_method.cpp  simple_factory.cpp
flyweight/: flyweight.cpp
interpreter/: interpreter.cpp
iterator/: iterator.cpp
mediator/: mediator.cpp
memento/: memento.cpp
observer/: observer.cpp
prototype/: prototype.cpp
proxy/: proxy.cpp
responsibility/: responsibility.cpp
singleton/: hungry_singleton.cpp  lazy_singleton.cpp  my_singleton.cpp
state/: state.cpp
strategy/: strategy.cpp
template_method/: template_method.cpp
visitor/: visitor.cpp
